# RM_CV_task

./: .gitignore  README.md  TODO.md  environment.yml  example.java  yolo11n-cls.pt  yolo11s-cls.pt  官方示例.md
CV_task/: train.py
CV_task/一.赛事知识题/: README.md  赛事知识题.md
CV_task/三.赛事题/armor/: README.md
CV_task/三.赛事题/armor/src/: display.py  main.py
CV_task/三.赛事题/机关/src/: main.py
CV_task/二.应用题/: README.md  main.py
CV_task/二.应用题/utils/: Armor.py  armor.py
CV_task/五.深度学习任务/: README.md
CV_task/五.深度学习任务/1.分类任务/: Inference.py  README.md  lenet5_best.pth  train.py
CV_task/五.深度学习任务/2.回归任务/: README.md
CV_task/五.深度学习任务/3.神经网络剪枝/: NOTE.md
CV_task/四.OpenCV基础题/: 1.py  2.py  3.py  README.md
CV_task/标定/: 2.2calibrate_camera.py  README.md
CV_task/赛事题/: image_processor.py  movie_publish.py  movie_reader.py
CV_task/赛事题/armor/src/: datect_armor.py  main.py  pnp.py
CV_task/赛事题/armor_cpp/: CMakeLists.txt  build.bat
CV_task/赛事题/armor_cpp/include/: light_descriptor.h
CV_task/赛事题/armor_cpp/src/: armor_detector.cpp  main.cpp
CV_task/赛事题/armor_detector/: __init__.py  armor.py  armor_types.py  color_segmenter.py  config.py  demo.py  detector.py  light_bar.py
UI_design/: README.md  原型图.md  题目.md
docs/plans/: 2026-03-25-armor-detection-design.md  2026-03-25-armor-detection-impl.md
ros2_ws/src/armor_detection/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/armor_detection/config/: armor_config.yaml
tests/: conftest.py  test_armor.py  test_color_segmenter.py  test_config.py  test_detector.py  test_integration.py  test_light_bar.py  test_types.py
(+4 files in other folders)
